kubernetes/minio/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-flink
  labels:
    name: minio-flink
    app: minio-namespace
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-service
  namespace: minio-flink
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - name: minio
      protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio-flink
spec:
  containers:
    - name: minio
      image: quay.io/minio/minio:latest
      command:
        - /bin/bash
        - -c
      args:
        - minio server /data --console-address :9090
      ports:
        - containerPort: 9000
        - containerPort: 9001
        - containerPort: 9090
      volumeMounts:
        - mountPath: /data
          name: localvolume # Corresponds to the `spec.volumes` Persistent Volume
    - name: minio-setup
      command:
        - /bin/sh
        - -c
        - ' sleep 10; /usr/bin/mc config host add myminio http://minio-service.minio-flink.svc.cluster.local:9000 minioadmin minioadmin; /usr/bin/mc mb myminio/flink-bucket; /usr/bin/mc mb myminio/lo-flink-bucket/checkpoints; /usr/bin/mc mb myminio/lo-flink-bucket/savepoints; tail -f /dev/null; '
      image: minio/mc
  volumes:
    - name: localvolume
      hostPath: # MinIO generally recommends using locally-attached volumes
        path: /mnt/disk1/data # Specify a path to a local drive or volume on the Kubernetes worker node
        type: DirectoryOrCreate # The path to the last directory must exist
